# job_posting

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
docs/: config.md
notebooks/: base_n.ipynb  bert.ipynb  bert_description_classification.ipynb  eda.ipynb  skills_extraction.ipynb
src/: __init__.py  classification_model.py  config.py  etl.py  main.py  main_test.py  model.py  skills_model.py
src/app/: main.py
src/app/api/dependencies/: __init__.py  client.py  services.py
src/app/api/responses/: __init__.py  classify.py  extract_skills.py
src/app/api/routers/: classify.py  extract_skill.py  health.py
src/app/api/schemas/: __init__.py  schemas.py
src/app/config/: config.py
src/app/core/classifiers/: __init__.py  classification_model.py
src/app/core/ner/: __init__.py  skills_model.py
src/app/logs/: __init__.py  logger.py
src/config/: config.py
src/core/ner/: __init__.py
src/data/07_logs/: lifespan
