[project]
name = "job-posting"
version = "0.1.0"
description = "NLP classifier and NER"
readme = "README.md"
requires-python = "==3.12"
dependencies = [
    "accelerate>=1.10.0",
    "datasets>=4.0.0",
    "dotenv>=0.9.9",
    "evaluate>=0.4.5",
    "hf-xet>=1.1.8",
    "huggingface-hub>=0.34.4",
    "ipykernel>=6.30.1",
    "kagglehub[pandas-datasets]>=0.3.12",
    "nltk>=3.9.1",
    "pandas>=2.3.1",
    "path>=17.1.1",
    "pip>=25.2",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.3",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
]
