    [project]
    name = "job-posting"
    version = "0.1.0"
    description = "NLP classifier and NER"
    readme = "README.md"
    requires-python = ">=3.12"
    dependencies = [
        "accelerate>=1.10.0",
        "dotenv>=0.9.9",
        "evaluate>=0.4.5",
        "fastapi>=0.116.1",
        "hf-xet>=1.1.8",
        "huggingface-hub>=0.34.4",
        "ipykernel>=6.30.1",
        "kagglehub[pandas-datasets]>=0.3.12",
        "nltk>=3.9.1",
        "pandas>=2.3.1",
        "path>=17.1.1",
        "pip>=25.2",
        "pydantic>=2.11.7",
        "scikit-learn>=1.7.1",
        "seqeval>=1.2.2",
        "sklearn-crfsuite>=0.5.0",
        "torch>=2.8.0",
        "torchaudio>=2.8.0",
        "torchvision>=0.23.0",
        "transformers>=4.55.3",
        "uvicorn>=0.35.0",
]

    [dependency-groups]
    dev = [
        "matplotlib>=3.10.5",
        "seaborn>=0.13.2",
    ]

    [tool.uv.sources]
    torch = { index = "pytorch-cu126" }
    torchvision = { index = "pytorch-cu126" }
    torchaudio = { index = "pytorch-cu126" }
    
    [[tool.uv.index]]
    name = "pytorch-cu126"
    url = "https://download.pytorch.org/whl/cu126"
    explicit = true
